--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <label for="message">message</label>
                     <textarea name="message" id="" placeholder="message" cols="30" rows="10"></textarea>
                 </div>
-                <div class="globe">
-                    <img src="images/globe.gif" alt="">
+                <div class="maps">
+                    <img src="images/maps.jpg" alt="">
                 </div>
             </div>
 
