--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+  <!-- debut bar de navigation -->
     <div class="full-image">
         <div class="sidebar">
             <div class="icon-section">
@@ -29,14 +29,17 @@
                     <li><a href="">Blog</a></li>
                 </ul>
             </div>
+            
             <div class="social-links">
                 <div>
                     <a target="blank" href="https://www.linkedin.com/in/akossiwa-augustine-zokpodo-b10b22236/"><i class="fab fa-linkedin"></i></a>
                     <a target="blank" href="https://github.com/augustev005/Augusta.git"><i class="fab fa-github"></i></a>
                     <a href=""><i class="fab fa-youtube"></i></a>
                 </div>
+                <!-- fin bar de navigation -->
             </div>
         </div>
+        <!-- l'entête de mon portfolio -->
         <div class="header">
             <div class="greet">
                 <div class="greet-text">
@@ -44,6 +47,7 @@
                     <span>Front-End Dev/ WordPress Expert</span>
                     <a href="#contact" class="contact-me">Contact me!</a>
                 </div>
+                <!-- fin de l'entête -->
             </div>
             <div class="header-content">
                 <div class="content-text">
@@ -54,9 +58,11 @@
                     <img class="circle-img" src="images/monitor.jpg" alt="" srcset="">
                 </div>
             </div>
+             <!-- sections projets -->
             <div class="projets">
                 <span>MON PORTFOLIO</span>
             </div>
+           
             <div class="text">Quelques exemples de <a href="">mes projets</a></div>
             <div class="pics-content">
                 <div class="pics_one">
@@ -76,6 +82,7 @@
                 </div>
                 <div class="pics_six">
                     <img src="images/site6.jpg" alt="" class="imgo">
+
                 </div>
             </div>
             <div class="la">
@@ -111,6 +118,7 @@
                     <div class="progression"></div>
                     <span>Wordpress</span>
                 </div>
+                <!-- le pied de mon portfolio -->
         </div>
         <div class="footer">
             <h2 id="contact">Contact me</h2>
